--- a/workflows/docker-build.yml
+++ b/workflows/docker-build.yml
@@ -1,1 +1,20 @@
 
+name: Build Docker Image
+
+on:
+  push:
+    branches: [master]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker image
+        run: docker build -t frontImg:latest .
