--- a/workflows/docker-build.yml
+++ b/workflows/docker-build.yml
@@ -18,3 +18,6 @@ jobs:
 
       - name: Build Docker image
         run: docker build -t frontImg:latest .
+
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
