--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
- "scripts": {
+"scripts": {
   "dev": "vite",
   "build": "vite build",
   "lint": "eslint .",
-  "preview": "vite preview --host 0.0.0.0 --port $PORT",
-  "start": "npx serve -s dist -l $PORT"
+  "preview": "vite preview"
 },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
